--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "postcss": "^8.4.38",
     "prettier": "^3.3.1",
     "prettier-plugin-tailwindcss": "^0.6.2",
+    "react-icons": "^5.2.1",
     "tailwindcss": "^3.4.4",
     "vite": "^5.2.0"
   },
