--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "prettier-plugin-tailwindcss": "^0.6.2",
     "react-icons": "^5.2.1",
     "tailwindcss": "^3.4.4",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-node-polyfills": "^0.22.0"
   },
   "prettier": {
     "plugins": [
