--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "me.theppitak",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -35,8 +35,6 @@
     "vite-plugin-node-polyfills": "^0.22.0"
   },
   "prettier": {
-    "plugins": [
-      "prettier-plugin-tailwindcss"
-    ]
+    "plugins": ["prettier-plugin-tailwindcss"]
   }
 }
